--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <li>knapp2</li>
             <li>knapp3</li>
             <li>knapp4</li>
+            <li>knapp1</li>
+            <li>knapp2</li>
+            <li>knapp3</li>
+            <li>knapp4</li>
         </ul>
     </nav>
     
