--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             <li>knapp2</li>
             <li>knapp3</li>
             <li>knapp4</li>
-            <li>knapp1</li>
-            <li>knapp2</li>
-            <li>knapp3</li>
-            <li>knapp4</li>
+            <li>hej</li>
+            <li>då</li>
+            <li>LOL</li>
+            <li>rawr xd</li>
         </ul>
     </nav>
     
