nästan klar med mobillayout lite finlir kvar

--- a/index.html
+++ b/index.html
@@ -56,53 +56,53 @@
     </div>
     
     <div class="c3">
-        <div class="c21">
+        <div class="c31">
             <h1>App Features</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum asperiores similique at molestias eos sequi hic, cupiditate minima quam quaerat cumque? Fuga, quasi non. Eos!</p>
         </div>
 
-        <div class="c2-2">
+        <div class="c3-2">
             <div class="kort1">
-                <img src="img/Bg/kortbild.svg" alt="kort">
-                <h1>Easy pay</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
+                <img class="kortico" src="img/Bg/kortbild.svg" alt="kort">
+                <h1 class="korth1">Easy paypments</h1>
+                <p class="kortp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
             </div>
-            <div class="kort2">
-                <img  src="img/Bg/skölbild.svg" alt="sköld">
-                <h1>Easy pay</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
+            <div class="kort1">
+                <img class="kortico"  src="img/Bg/skölbild.svg" alt="sköld">
+                <h1 class="korth1">Data Security</h1>
+                <p class="kortp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
             </div>
-            <div class="kort3">
-                <img  src="img/Bg/stapelbild.svg" alt="stapel">
-                <h1>Easy pay</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
+            <div class="kort1">
+                <img class="kortico"  src="img/Bg/stapelbild.svg" alt="stapel">
+                <h1 class="korth1">Cost statistics</h1>
+                <p class="kortp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
             </div>
-            <div class="kort4">
-                <img src="img/Bg/bubblabild.svg" alt="bubbla">
-                <h1>Easy pay</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
+            <div class="kort1">
+                <img class="kortico" src="img/Bg/bubblabild.svg" alt="bubbla">
+                <h1 class="korth1">Support 24/7</h1>
+                <p class="kortp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
             </div>
-            <div class="kort5">
-                <img src="img/Bg/plonkbild.svg" alt="plonk">
-                <h1>Easy pay</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
+            <div class="kort1">
+                <img class="kortico" src="img/Bg/plonkbild.svg" alt="plonk">
+                <h1 class="korth1">Regular Cashback</h1>
+                <p class="kortp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
             </div>
-            <div class="kort6">
-                <img src="img/Bg/emojibild.svg" alt="emoji">
-                <h1>Easy pay</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
+            <div class="kort1">
+                <img class="kortico" src="img/Bg/emojibild.svg" alt="emoji">
+                <h1 class="korth1">Top Standards</h1>
+                <p class="kortp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
             </div>
         </div>
     </div>
 
     <div class="c4">
-        <h1>How Does It Work?</h1>
         <div class="telebild2">
+            <h1>How Does It Work?</h1>
             <img src="img/Bg/Imageiphone.svg" alt="">
         </div>
-        <div>
+        <div class="bottele">
             <h1>Transfers to people from your contact list</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus eius impedit error, ipsam vitae quisquam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus modi reprehenderit debitis. Animi pariatur minima sunt sint.</p>
         </div>
     </div>
     
@@ -112,11 +112,13 @@
             <h3>Still have unanswered questions and need to get in touch?</p>
         </div>
         <div class="faq1"> 
-            <label for="faqbtrv">is any of my personal information stored in the app?</label>
-            <button class="faqbtrv">
-                <img src="img/Bg/pilner.svg" alt="">
-            </button>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab doloribus aliquid perspiciatis repudiandae debitis voluptas dignissimos laborum, eius maxime dolorum consequatur, vel veritatis pariatur! Maxime illum saepe architecto dolores nemo!</p>
+            <div class="faq1b">
+                <label for="faqbtrv">is any of my personal information stored in the app?</label>
+                <button class="faqbtrv">
+                    <img src="img/Bg/pilupp.svg" alt="">
+                </button>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, veniam corporis voluptates consequuntur quasi aut iste voluptatibus sint saepe, nobis quam impedit. A quae molestiae assumenda minus autem itaque sint consequuntur dolorum non asperiores reprehenderit commodi, qui labore vel voluptatum consectetur temporibus in magnam. Autem ut quia voluptate quisquam velit!</p>
         </div>
         <div class="faq2"> 
             <label for="faqbtrv">what format can i downlod my transaction history in??</label>
