Snyggat till mobildesign

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="pilcont">
-            <button class="faqbtrv" id="c24"><img src="img/Bg/pilner.svg" alt=""></button>
+            <button class="faqbtrv" id="c24"><img src="img/Bg/pilnervit.svg" alt=""></button>
             <label for="c24">Discover more</label>
         </div>
         <img id="c25" class="phone1" src="img/Bg/tabletphone.svg" alt="img of phone">
@@ -166,9 +166,8 @@
             <label for="notispic">Subscribe to our newsletter</label>
         </div>
         <div class="textbox-sub">
-            <!-- <img src="img/Bg/email.svg" alt=""> -->
             <textarea name="Your-Email" id="textarea">Your email</textarea>
-            <label for="textarea"><button class="contactbtn">Subscribe</button></label>
+            <label for="textarea"><button class="contactbtn1">Subscribe</button></label>
         </div>
     </div>
     <div class="fotnot">
