--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="descripton" content="denna sida är ett skolarbete detta är bara hjälptext">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/Bg/favico.ico" type="image/x-icon">
 </head>
 <body>
     <div class="c1-2bg">
@@ -165,7 +166,6 @@
         <div class="c4-1">
             <h1>Any Questions? Check out the FAQs</h1>
             <p>Still have unanswered questions and need to get in touch?</p>
-            
         </div>
         <div class="faqborder">
         <div class="faq1"> 
