snygga till lite

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="descripton" content="denna sida är ett skolarbete detta är bara hjälptext">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="img/Bg/favico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/Bg/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="c1-2bg">
@@ -168,7 +168,7 @@
             <p>Still have unanswered questions and need to get in touch?</p>
         </div>
         <div class="faqborder">
-        <div class="faq1"> 
+        <div class="faq1 phone-only" > 
                 <div class="faq1b">
                     <label for="faqbtrv">is any of my personal information stored in the app?</label>
                     <button class="faqbtrv">
@@ -177,17 +177,32 @@
                 </div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, veniam corporis voluptates consequuntur quasi aut iste voluptatibus sint saepe, nobis quam impedit. A quae molestiae assumenda minus autem itaque sint consequuntur dolorum non asperiores reprehenderit commodi, qui labore vel voluptatum consectetur temporibus in magnam. Autem ut quia voluptate quisquam velit!</p>
         </div>
+        <div id="faq4" class="faq4 desktop-only tablet-only"> 
+            <label for="faqbtrv">is any of my personal information stored in the app?</label>
+            <button class="faqbtrv">
+                <img src="img/Bg/pilner.svg" alt="pilner">
+            </button>
+        </div>
         <div class="faq2"> 
             <label for="faqbtrv">what format can i downlod my transaction history in??</label>
             <button class="faqbtrv">
                 <img src="img/Bg/pilner.svg" alt="pilner">
             </button>
         </div>
-        <div class="faq3"> 
+        <div class="faq3 phone-only"> 
             <label for="faqbtrv">can i schedule future transfers?</label>
             <button class="faqbtrv">
                 <img src="img/Bg/pilner.svg" alt="pilner">
             </button>
+        </div>
+        <div class="faq1 desktop-only tablet-only "> 
+            <div class="faq1b">
+                <label for="faqbtrv">can i schedule future transfers?</label>
+                <button class="faqbtrv">
+                    <img src="img/Bg/pilupp.svg" alt="">
+                </button>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, veniam corporis voluptates consequuntur quasi aut iste voluptatibus sint saepe, nobis quam impedit. A quae molestiae assumenda minus autem itaque sint consequuntur dolorum non asperiores reprehenderit commodi, qui labore vel voluptatum consectetur temporibus in magnam. Autem ut quia voluptate quisquam velit!</p>
         </div>
         <div class="faq4"> 
             <label for="faqbtrv">When can i use Banking App Service?</label>
