Klar. Sista finlir samt css kvar.

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
         <div class="c2 container">
             <h1 id="c21" class="moneytext h1font">Manage All Your Money in One App</h1>
             
-            <span id="c22" class="breadtext">
+            <span class="breadtext">
             <p>We offer you a new generation of the mobile banking. Save, spend & manage money in your pocket</p>
             </span>
 
-            <div id="c23" class="storerek">
+            <div class="storerek">
                 
                 <a class="store-btn lightmode-only" href="https://www.apple.com/se/app-store/">
                     <img src="img/Bg/appstore.svg" alt="Appstore">
@@ -181,13 +181,13 @@
                 <h1>Recive payment from interneational bank details</h1>
                 <div id="grid-card1" class="kort1">
                     <div class="small-card">
-                        <img class="kortico" src="img/Bg/shield.svg" alt="kort">
+                        <img class="kortico" src="img/Bg/credit-card.svg" alt="kort">
                     </div>
                     <p class="kortp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
                 </div>
                 <div id="grid-card2" class="kort1">
                     <div class="small-card">
-                        <img class="kortico" src="img/Bg/shield.svg" alt="kort">
+                        <img class="kortico" src="img/Bg/wallet.svg" alt="kort">
                     </div>
                     <p class="kortp">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, ipsa?</p>
                 </div>
