--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
 
             <div class="storerek">
                 
-                <a class="store-btn lightmode-only" href="https://www.apple.com/se/app-store/">
+                <a class="store-btn lightmode-only" target="_blank" href="https://www.apple.com/se/app-store/">
                     <img src="img/Bg/appstore.svg" alt="Appstore">
                 </a>
-                <a class="store-btn lightmode-only" href="https://play.google.com/store/games?device=windows">
+                <a class="store-btn lightmode-only" target="_blank" href="https://play.google.com/store/games?device=windows">
                     <img src="img/Bg/playstore.svg" alt="Play butik">
                 </a>
-                <a class="store-btn darkmode-only" href="https://www.apple.com/se/app-store/">
+                <a class="store-btn darkmode-only" target="_blank" href="https://www.apple.com/se/app-store/">
                     <img src="img/Bg/appstore-dark.svg" alt="Appstore">
                 </a>
-                <a class="store-btn darkmode-only" href="https://play.google.com/store/games?device=windows">
+                <a class="store-btn darkmode-only" target="_blank" href="https://play.google.com/store/games?device=windows">
                     <img src="img/Bg/playstore-dark.svg" alt="Play butik">
                 </a>
      
