--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="descripton" content="denna sida är ett skolarbete detta är bara hjälptext">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.scss">
     <link rel="shortcut icon" href="img/Bg/favicon.ico" type="image/x-icon">
 </head>
 <body>
