--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="descripton" content="denna sida är ett skolarbete detta är bara hjälptext">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="scss/main.scss">
+    <link rel="stylesheet" href="scss/main.css">
     <link rel="shortcut icon" href="img/Bg/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -22,7 +22,7 @@
             </nav>
 
             <div class="tdm">
-                <span class="dml">Dark mode</span>
+                <span class="dark-mode-lable">Dark mode</span>
                 <label for="darkmode-switch" class="switch">
                     <input type="checkbox" id="darkmode-switch">
                     <span class="slider round"></span>
