--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     </button>
                 </div>
                 <div class="c1b">
-                <h1>Manage All Your Money in One App</h1>
-                <p>We offer you a new generation of the mobile banking. Save, spend & manage money in your pocket</p>
+                <h1 class="header">Manage All Your Money in One App</h1>
+                <p class="general-text">We offer you a new generation of the mobile banking. Save, spend & manage money in your pocket</p>
                 <div class="storerek">
                     <a class="btn-store lightmode-only" target="_blank" href="https://www.apple.com/se/app-store/">
                         <img src="img/Bg/appstore.svg" alt="Appstore">
@@ -56,7 +56,7 @@
                         <img class="lightmode-only" src="img/Bg/pilner.svg" alt="">
                         <img class="darkmode-only-block" src="img/Bg/pilner-darkmode.svg" alt="">
                     </a>
-                    <span for="discover-more">Discover more</span>
+                    <span class="s-text" for="discover-more">Discover more</span>
                 </div>
                     <img id="phone-tablet" class="phone2" src="img/Bg/tabletphone.svg" alt="img of phone">
                     <img id="phone-desktop" class="phone1" src="img/Bg/phone-desk.svg" alt="img of phone">
@@ -77,8 +77,8 @@
                 <div class="creditphone">
                 <img src="img/Bg/phone2.svg" alt="">
                 </div>
-                <h1>App Features</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum asperiores similique at molestias eos sequi hic, cupiditate minima quam quaerat cumque? Fuga, quasi non. Eos!</p>
+                <h1 class="header-small">App Features</h1>
+                <p class="general-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum asperiores similique at molestias eos sequi hic, cupiditate minima quam quaerat cumque? Fuga, quasi non. Eos!</p>
                 <div class="card-view">
                     <div id="kort1" class="kort">
                         <div class="small-card">
@@ -128,17 +128,17 @@
         
         <div class="bg-primary">
             <div class="c3 container ">
-                <h1>How Does It Work?</h1>
+                <h1 class="header-small">How Does It Work?</h1>
                 <div class="img-showrow">
                         <img id="img-phone" src="img/Bg/Imageiphone.svg" alt="">
                         <img id="img-desktop" src="img/Bg/3phone1.svg" alt="">
                         <img id="img-tablet" src="img/Bg/img-tablet.svg" alt="">
                 </div>
                 <div class="bot-tele">
-            <h1 class="phone-only">Transfer to people from your contact list</h1>
-            <h1 class="tablet-only">Step 3: Transfer to people from your contact list</h1>
+            <h1 class="phone-only h5">Transfer to people from your contact list</h1>
+            <h4 class="tablet-only">Step 3: Transfer to people from your contact list</h1>
             <h1 class="desktop-only">Latest transaction History</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi deserunt consequatur cum nulla necessitatibus sed doloremque distinctio placeat hic illum.</p>
+            <p class="m-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi deserunt consequatur cum nulla necessitatibus sed doloremque distinctio placeat hic illum.</p>
                 </div>
             </div>
         </div>
